crates/sm-emit/tests/snapshots/markers__a_deletion_renders_as_an_empty_side.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
<<<<<<< ours
=======
  void a() { x(); z(); }
>>>>>>> theirs
  void b() {}
}
