crates/sm-emit/tests/snapshots/markers__a_trailing_conflict_ends_with_a_newline.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
<<<<<<< ours
class D {}
=======
class E {}
>>>>>>> theirs
