crates/sm-emit/tests/snapshots/markers__conflicting_code_keeps_its_indentation.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
  void a() {
    if (p) {
<<<<<<< ours
      ours();
=======
      theirs();
>>>>>>> theirs
    }
  }
}
