crates/sm-emit/tests/snapshots/markers__default_markers_are_seven_characters_with_ours_and_theirs_labels.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
  void a() {
<<<<<<< ours
    ours();
=======
    theirs();
>>>>>>> theirs
  }
}
