crates/sm-emit/tests/snapshots/markers__diff3_style_includes_the_ancestor.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
  void a() {
<<<<<<< ours
    ours();
||||||| base
    p();
=======
    theirs();
>>>>>>> theirs
  }
}
