crates/sm-emit/tests/snapshots/markers__labels_come_from_the_options.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
  void a() {
<<<<<<< HEAD
    ours();
||||||| merged common ancestors
    p();
=======
    theirs();
>>>>>>> feature/x
  }
}
