crates/sm-emit/tests/snapshots/markers__two_conflicts_in_one_file_are_both_well_formed.snap
---
source: crates/sm-emit/tests/markers.rs
expression: text
---
class C {
<<<<<<< ours
  int a = 2;
=======
  int a = 3;
>>>>>>> theirs

<<<<<<< ours
  int b = 2;
=======
  int b = 3;
>>>>>>> theirs
}
